<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bitloor.ggloor.InputActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorWhiteSmoke"
        android:textColor="@color/colorWhiteSmoke"
        android:hint="@string/NickOrEmail"
        android:id="@+id/input_nick"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/colorWhiteSmoke"
        android:textColor="@color/colorWhiteSmoke"
        android:id="@+id/input_password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input"
        android:layout_gravity="top|center"
        android:id="@+id/input_button"
        android:onClick="onInputGo"/>
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/triangle"
        android:layout_gravity="top|center"
        android:visibility="gone"
        android:id="@+id/gif_load"
        />
</LinearLayout>
