<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bitloor.ggloor.RegActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/reg_res_text"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="Для продолжения регистрации прейдите по ссылке из письма присланного на Вашу почту"
            android:textSize="20sp"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/reg_form">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_nick_reg"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick"
            android:textColorHint="@color/colorWhiteSmoke"
            android:textColor="@color/colorWhiteSmoke"
            android:inputType="textPersonName"
            android:id="@+id/nickText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_email_reg"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emaitText"
            android:hint="@string/e_mail"
            android:textColorHint="@color/colorWhiteSmoke"
            android:textColor="@color/colorWhiteSmoke"
            android:inputType="textEmailAddress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_password_reg"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhiteSmoke"
            android:textColor="@color/colorWhiteSmoke"
            android:inputType="textPassword"
            android:id="@+id/passwordText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rep_password"
            android:textColorHint="@color/colorWhiteSmoke"
            android:textColor="@color/colorWhiteSmoke"
            android:id="@+id/repPasswordText"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="top|center"
            android:onClick="regEx"/>
        <pl.droidsonroids.gif.GifImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/triangle"
            android:layout_gravity="top|center"
            android:visibility="gone"
            android:id="@+id/gif_load"
            />
    </LinearLayout>
</LinearLayout>
